# AdventKit

./: .gitignore  CMakeLists.txt
include/AdventKit/: DataStructures.h  ReadData.h  RepresentData.h
src/: CartesianCoordinates.h  Coordinates.h  Direction.h  LMatrix.h  Lines.h  Tile.h  VMatrix.h  Walker.h
src/matrices/: v_matrix_char.cpp  v_matrix_char.h
src/walkers/: lines_walker.cpp  lines_walker.h  v_matrix_char_walker.cpp  v_matrix_char_walker.h
ut/: CMakeLists.txt
ut/matrices/: v_matrix_char.cpp
